docs: created swagger from controller transfer
